RESOLVED FIXED 226259
Scrollbars/indicators are sometimes incorrectly drawn when async overflow scrolling is enabled
https://bugs.webkit.org/show_bug.cgi?id=226259
Summary Scrollbars/indicators are sometimes incorrectly drawn when async overflow scr...
Chris Lord
Reported 2021-05-26 01:33:23 PDT
Some tests are failing on WPE since enabling async overflow scrolling in tests due to incorrect drawing of scrollbars/indicators.
Attachments
Patch (4.97 KB, patch)
2021-05-26 01:38 PDT, Chris Lord
no flags
Patch (5.74 KB, patch)
2021-05-26 07:57 PDT, Chris Lord
no flags
Patch (5.57 KB, patch)
2021-05-26 15:09 PDT, Chris Lord
no flags
Chris Lord
Comment 1 2021-05-26 01:38:23 PDT
Chris Lord
Comment 2 2021-05-26 01:57:13 PDT
Comment on attachment 429736 [details] Patch Obviously not quite there yet.
Chris Lord
Comment 3 2021-05-26 07:57:53 PDT
Chris Lord
Comment 4 2021-05-26 08:24:18 PDT
Comment on attachment 429754 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=429754&action=review > Source/WebCore/ChangeLog:8 > + Respect clipped overflow when deciding whether to create layers for The ChangeLog entry should read: "Respect scrolled contents visibility when rendering scrollbar layers."
Simon Fraser (smfr)
Comment 5 2021-05-26 08:29:45 PDT
Comment on attachment 429754 [details] Patch Odd that this doesn't affect macOS behavior.
Chris Lord
Comment 6 2021-05-26 08:36:39 PDT
(In reply to Simon Fraser (smfr) from comment #5) > Comment on attachment 429754 [details] > Patch > > Odd that this doesn't affect macOS behavior. I guess Mac doesn't run tests with async overflow scrolling enabled? Or implements it differently somehow? I think that's either the only thing that hit this path incorrectly, or at least the most common thing. Same goes for bug 225922, and I guess the failures in bug 224596.
Chris Lord
Comment 7 2021-05-26 15:09:50 PDT
EWS
Comment 8 2021-05-26 15:46:13 PDT
Committed r278129 (238179@main): <https://commits.webkit.org/238179@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 429801 [details].
Radar WebKit Bug Importer
Comment 9 2021-05-26 15:47:20 PDT
Note You need to log in before you can comment on or make changes to this bug.