Scrollbars/indicators are sometimes incorrectly drawn when async overflow scrolling is enabled https://bugs.webkit.org/show_bug.cgi?id=226259

Reviewed by Simon Fraser.

Source/WebCore:

Respect scrolled contents visibility when rendering scrollbar layers.

No new tests, covered by existing tests.

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::paintContents):

LayoutTests:

Some tests involving overflow scrolling now pass.

* platform/wpe/TestExpectations:


Canonical link: https://commits.webkit.org/238179@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278129 268f45cc-cd09-0410-ab3c-d52691b4dbfc